typescript/checker/tests/conformance/es6/templates/taggedTemplateStringsWithTypedTagsES6.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            200,
        ),
        hi: BytePos(
            201,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/taggedTemplateStringsWithTypedTagsES6.ts:11:5
   |
11 | var f: I;
   |     ^

